Add README and update Cargo.toml for crates.io

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,12 @@
 [package]
-name = "geocog"
-version = "0.1.0"
+name = "cogrs"
+version = "0.0.1"
 edition = "2024"
-description = "Pure Rust COG (Cloud Optimized GeoTIFF) reader library"
+description = "Tools for creating COG-based tilers"
 license = "MIT"
+repository = "https://github.com/evanjt/cogrs"
+documentation = "https://docs.rs/cogrs"
+homepage = "https://github.com/evanjt/cogrs"
 readme = "README.md"
 keywords = ["cog", "geotiff", "tiff", "raster", "geo"]
 categories = ["science::geo", "encoding"]
